--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,21 @@
     </style>
 </head>
 <body>
+    <div style="margin-top:10px; margin-bottom:20px;">
+        <a href="/history" style="text-decoration: none;">
+        <button type="button" style="padding:10px 20px;background-color:#4CAF50;color:white;border:none;border-radius:5px;">
+            図書館の利用予約
+        </button>
+</a>
+
+    <a href="/" style="text-decoration: none; margin-left: 10px;">
+        <button type="button" style="padding: 10px 20px; background-color: #757575; color: white; border: none; border-radius: 5px;">
+            ホームに戻る
+        </button>
+        </a>
+    </div>
+
+
     <div class="container">
         <h1>図書管理システム</h1>
         <div style="margin-bottom: 20px; padding: 10px; border: 1px solid #ccc;">
