ページ偏移

--- a/bag/templates/index.html
+++ b/bag/templates/index.html
@@ -18,6 +18,7 @@
         <div style="margin-bottom: 20px;">
             <a href="/history" class="btn btn-green">図書館の利用予約</a>
             <a href="/" class="btn btn-gray">ホームに戻る</a>
+            <a href="/talk" class="btn btn-gray">掲示板に移動</a>
         </div>
 
         <h1>図書管理システム</h1>
