スペルミスの修正5

--- a/bag/templates/index2.html
+++ b/bag/templates/index2.html
@@ -68,11 +68,10 @@
             </ul>
         </div>
     </div>
-    <div class="next-page-container"></div>
-            <a href="index2" class="bottom-botan">
+    <div class =bottom-botan>
+            <link rel="stylesheet" href="index2">
         次のページへ
-            </a>
-        </div>
+    </div>
 
     <script>
         function updateClock() {
