--- a/bag/templates/index.html
+++ b/bag/templates/index.html
@@ -19,7 +19,8 @@
         <div class="nav-buttons">
             <a href="/" class="btn btn-gray">ホーム</a>
             <a href="/history" class="btn btn-green">予約状況</a>
-            <a href="/talk" class="btn btn-gray">掲示板</a>
+            <a href="/talk" class="btn btn-green">掲示板</a>
+            <a href="/index2" class="btn btn-green">備品管理</a>
         </div>
 
         <h1>図書管理システム</h1>
@@ -70,7 +71,7 @@
     </div>
     <div class="next-page-container"></div>
             <a href="index2" class="bottom-botan">
-        次のページへ
+        備品のページへ
             </a>
         </div>
 
