--- a/bag/templates/index2.html
+++ b/bag/templates/index2.html
@@ -22,7 +22,7 @@
             <a href="/talk" class="btn btn-gray">掲示板</a>
         </div>
 
-        <h1>図書管理システム</h1>
+        <h1>備品管理システム</h1>
 
         <div id="realtime-clock">時刻を読み込み中...</div>
 
@@ -35,7 +35,7 @@
         </div>
 
         <div class="book-list-section">
-            <h2>現在の蔵書一覧</h2>
+            <h2>現在の備品一覧</h2>
             <ul>
                 {% for book in books %}
                 <li style="display: flex; align-items: center; margin-bottom: 15px; border-bottom: 1px solid #eee; padding-bottom: 10px;">
