--- a/bag/templates/index.html
+++ b/bag/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>図書・部室管理システム</title>
+    <title>図書・・・・・・・・・・・・・・・・・・・・・・・・・・・・部室管理システム</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='test.css') }}">
     <style>
         .book-list-section { border: 2px solid #ccc; padding: 15px; border-radius: 5px; margin-top: 20px; }
